--- a/vue2-javascript-components-communication-demo/package.json
+++ b/vue2-javascript-components-communication-demo/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "mirai-js": "^2.8.6",
+    "mitt": "^3.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
